//#service-request-reply
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.helloworld";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service GreeterService {

    rpc ItKeepsReplying (HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    int64 n = 1;
}

// The response message containing the greetings
message HelloReply {
    int64 prime = 1;
}
//#service-request-reply
